apply plugin: 'java'
group = 'org.alking'
sourceCompatibility = '1.8'
targetCompatibility = '1.8'
version = '0.0.1'

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

repositories {
    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
}